--- a/style.css
+++ b/style.css
@@ -1538,14 +1538,14 @@ footer .tab {
 
     .banner .name {
         transform: translateY(-208px);
-        box-sizing: border-box;
+        box-sizing: border-box;                                                     
     }
 
     .bannerflex .big .button1 {
         position: absolute;
         top: 0;
         right: 100px;
-        margin-right: 22px;
+        margin-right: 22px;                                                                                                                                                 
         margin-top: 16px;
          padding: 11px 12px 10.5px;
         font-size: 16px;
@@ -1724,6 +1724,9 @@ footer .tab {
         width: 124px !important;
         height: 124px !important;
         box-sizing: border-box;
+    }
+    .featured h3{
+        line-height: 24.2px;
     }
     .featured ul li a {
     font-weight: 900;
@@ -1969,20 +1972,20 @@ footer .tab {
     }
 
     .feaflex {
-        display: flex;
+        display: flex;                           
         flex-flow: wrap;
         width: 100%;
         max-width: 1184px;
-        box-sizing: border-box;
+        box-sizing: border-box;                                                                                                              
     }
-    .feaflex .pet {
+    .feaflex .pet {                                                                                                                                                                                                                                                     
     margin-right: 0px !important;
 }
 
     .feaflex>div {
-        max-width: 50% !important;
+        max-width: 50% !important;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
         min-width: 50% !important;
-        padding: 20px !important;
+        padding: 20px !important;                                                 
         margin: 0 !important;
         align-items: center;
         display: flex;
@@ -2305,7 +2308,9 @@ footer .tab {
 
     /* ----------------------------------------------- */
   
-
+    .featured h3{
+        line-height: 24px;
+    }
     /* ---------------------------------------------------- */
     .services .content .o {
         padding: 20px !important;
